--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
-    <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/7-places.css">
     <link rel="icon" href="images/icon.png">
 </head>
 <body>
@@ -45,6 +45,18 @@
                 </ul>
             </div>
             <button class="search-button">Search</button>
+        </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article>
+                <h2>My home</h2>
+            </article>
+            <article>
+                <h2>Tiny house</h2>
+            </article>
+            <article>
+                <h2>A suite</h2>
+            </article>
         </section>
     </div>
     <footer>Best School</footer>
