--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/8-places.css">
+    <link rel="stylesheet" href="styles/100-places.css">
     <link rel="icon" href="images/icon.png">
 </head>
 <body>
@@ -79,6 +79,36 @@
                         comfort and security, promising a delightful and worry-free stay.
                     </p>
                 </div>
+                <div class="amenities">
+                    <h2>Amenities</h2>
+                    <ul>
+                        <li>
+                            <div class="places_amenities_pet_friendly"></div>
+                            <p>Pet friendly</p>
+                        </li>
+                        <li>
+                            <div class="places_amenities_tv"></div>
+                            <p>Tv</p>
+                        </li>
+                        <li>
+                            <div class="places_amenities_wifi"></div>
+                            <p>Wifi</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="reviews">
+                    <h2>Reviews</h2>
+                    <ul>
+                        <li>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>The first of Bob Dylan's Bootleg Series (vol 1-3) remains a classic</p>
+                        </li>
+                        <li>
+                            <h3>A Tribe Called Judah (2023)</h3>
+                            <p>Highly recommended!</p>
+                        </li>
+                    </ul>
+                </div>
             </article>
             <article>
                 <h2>Tiny house</h2>
@@ -111,6 +141,36 @@
                         of mind.
                     </p>
                 </div>
+                <div class="amenities">
+                    <h2>Amenities</h2>
+                    <ul>
+                        <li>
+                            <div class="places_amenities_pet_friendly"></div>
+                            <p>Pet friendly</p>
+                        </li>
+                        <li>
+                            <div class="places_amenities_tv"></div>
+                            <p>Tv</p>
+                        </li>
+                        <li>
+                            <div class="places_amenities_wifi"></div>
+                            <p>Wifi</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="reviews">
+                    <h2>Reviews</h2>
+                    <ul>
+                        <li>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>The first of Bob Dylan's Bootleg Series (vol 1-3) remains a classic</p>
+                        </li>
+                        <li>
+                            <h3>A Tribe Called Judah (2023)</h3>
+                            <p>Highly recommended!</p>
+                        </li>
+                    </ul>
+                </div>
             </article>
             <article>
                 <h2>A suite</h2>
@@ -128,7 +188,7 @@
                     </div>
                     <div class="number_bathrooms">
                         <div class="bath_image"></div>
-                        <p>100 Bathroom</p>
+                        <p>1 Bathroom</p>
                     </div>
                 </div>
                 <div class="user">
@@ -142,6 +202,32 @@
                         luxury living. Revel in the grandeur of this beautifully well-structured space, available at an affordable
                         rate of only $150 per night.
                     </p>
+                </div>
+                <div class="amenities">
+                    <h2>Amenities</h2>
+                    <ul>
+                        <li>
+                            <div class="places_amenities_pet_friendly"></div>
+                            <p>Pet friendly</p>
+                        </li>
+                        <li>
+                            <div class="places_amenities_tv"></div>
+                            <p>Tv</p>
+                        </li>
+                        <li>
+                            <div class="places_amenities_wifi"></div>
+                            <p>Wifi</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="reviews">
+                    <h2>Reviews</h2>
+                    <ul>
+                        <li>
+                            <h3>A Tribe Called Judah (2023)</h3>
+                            <p>Highly recommended!</p>
+                        </li>
+                    </ul>
                 </div>
             </article>
         </section>
