--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AirBnB Clone</title>
+    <title>AirBnB clone</title>
     <style>
         body
         {
